class Chef
{
private:
    /* data */
public:
    Chef(/* args */) {}
    ~Chef() {}
};