class Datos
{
private:
    /* data */
public:
    Datos(/* args */) {}
    ~Datos() {}
};