class Huevo
{
private:
    /* data */
public:
    Huevo(/* args */) {}
    ~Huevo() {}
};