class PanInferior
{
private:
    /* data */
public:
    PanInferior(/* args */) {}
    ~PanInferior() {}
};