class PanSuperior
{
private:
    /* data */
public:
    PanSuperior(/* args */) {}
    ~PanSuperior() {}
};