class PersonajeJugable
{
private:
    /* data */
public:
    PersonajeJugable(/* args */) {}
    ~PersonajeJugable() {}
};