class Punto
{
private:
    /* data */
public:
    Punto(/* args */) {}
    ~Punto() {}
};