class Salchicha
{
private:
    /* data */
public:
    Salchicha(/* args */) {}
    ~Salchicha() {}
};