class Carne
{
private:
    /* data */
public:
    Carne(/* args */) {}
    ~Carne() {}
};