class Lechuga
{
private:
    /* data */
public:
    Lechuga(/* args */) {}
    ~Lechuga() {}
};