class Pimienta
{
private:
    /* data */
public:
    Pimienta(/* args */) {}
    ~Pimienta() {}
};